fix form control inputs being too small

--- a/frontend/src/sass/base/_base.scss
+++ b/frontend/src/sass/base/_base.scss
@@ -54,3 +54,7 @@ main {
 .center {
   text-align: center;
 }
+
+.form-control {
+  font-size: 1rem;
+}
